# Ship-load-calc

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  import_codes_from_excel.py  pyproject.toml  run.bat
backend/: alembic.ini  init_db.py  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/endpoints/: __init__.py  codes.py  ecr.py  load_cases.py  projects.py  reports.py
backend/app/core/: config.py  database.py  dependencies.py
backend/app/models/: code_directory.py  ecr.py  load_case_template.py  load_line.py  project.py
backend/app/repositories/: interfaces.py  unit_of_work.py
backend/app/repositories/sqlalchemy/: __init__.py  code_repository.py  ecr_repository.py  load_case_template_repository.py  load_line_repository.py  project_repository.py
backend/app/schemas/: common.py  ecr.py  load_case.py  load_line.py  project.py  report.py
backend/app/services/: __init__.py  aggregation.py  deadweight.py  lightweight.py  ship_load_service.py  volume.py
backend/tests/: conftest.py
backend/tests/unit/: test_main.py
clients/client1/: __init__.py  ecr_edit_widget.py  main.py  main_window.py  requirements.txt
clients/client2/: __init__.py  active_load_widget.py  ecr_review_widget.py  main.py  main_window.py  reports_widget.py  requirements.txt
clients/common/: api_client.py
clients/common/widgets/: table_widget.py
