[build-system]
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "ship-load-calculator"
version = "1.0.0"
description = "Расчёт нагрузки масс судов по ОСТ5Р.0206-2002"
readme = "README.md"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = "-v --cov=backend/app --cov-report=html"